# console_logger

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  Doxyfile  LICENSE  README.md  api.md  cmbuild.sh  doxide.yaml
.cache/clangd/index/: console_logger.cpp.940A52BBD731CAB2.idx  console_logger.cpp.F862DF68B57B7D45.idx  console_logger.h.B4DF63F81EF031DC.idx
cmake/: console_loggerConfig.cmake.in
docs/: docs.md  index.md
docs/console/: index.md
docs/xml/: Doxyfile.xml  README_8md.xml  console__logger_8cpp.xml  console__logger_8h.xml  dir_405badfee940cf67fa68a44dd658050e.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  index.xml  indexpage.xml  namespaceansi.xml  namespacelogger.xml  namespacelogger_1_1detail.xml
include/console_logger/: console_logger.h  console_logger.hpp
src/: console_logger.cpp
